cmake_minimum_required(VERSION 3.10)

project(CMakeTestProject CXX)

if(NOT CMAKE_CXX_STANDARD)
    set(CMAKE_CXX_STANDARD 17)
    set(CMAKE_CXX_STANDARD_REQUIRED ON)
endif()

add_subdirectory(${mod_DIR}
        ${CMAKE_CURRENT_BINARY_DIR}/mod)

add_executable(doStuff main.cpp)
target_link_libraries(doStuff mod::libmod)